Fix url buttons alignment in playroom

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -4,6 +4,7 @@
   @apply px-4 py-2.75;
   @apply self-center;
   @apply bg-brand border-brand;
+  @apply inline-block;
 
   &:hover {
     @apply bg-brand-hover;
